--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
